syntax = "proto3";

service ProductService {
    rpc GetProduct(ProductRequest) returns (ProductResponse);
    rpc SearchProducts(Empty) returns (ProductList);
    rpc CreateProduct(ProductCreateRequest) returns (ProductResponse);
    rpc UpdateProduct(ProductUpdateRequest) returns (ProductResponse);
    rpc DeleteProduct(ProductRequest) returns (DeleteResponse);
}

message ProductRequest {
    string productId = 1;
}

message ProductResponse {
    string productId = 1;
    string name = 2;
    float price = 3;
    string description = 4;
}

message ProductCreateRequest {
    string name = 1;
    float price = 2;
    string description = 3;
}

message ProductUpdateRequest {
    string productId = 1;
    string name = 2;
    float price = 3;
    string description = 4;
}

message Empty {}

message ProductList {
    repeated ProductResponse products = 1;
}

message DeleteResponse {
    string message = 1;
}
